unpackaged/main/default/objects/Student1__c/Student1__c.object-meta.xml
<CustomObject>
    <label>Stud</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Studs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>