unpackaged/main/default/objects/Student1__c/fields/Fee1__c.field-meta.xml
<CustomField>
    <fullName>Fee1__c</fullName>
    <label>Fee1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>