unpackaged/main/default/objects/Student1__c/fields/Fee2__c.field-meta.xml
<CustomField>
    <fullName>Fee2__c</fullName>
    <label>Fee2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>