unpackaged/main/default/objects/Student1__c/fields/Total_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee__c</fullName>
    <formula>Fee1__c  +  Fee2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>