unpackaged/main/default/objects/Student1__c/recordTypes/School_Management_System.recordType-meta.xml
<RecordType>
    <fullName>School_Management_System</fullName>
    <active>true</active>
    <label>School_Management_System</label>
</RecordType>