unpackaged/main/default/objects/Student1__c/listViews/New_Last_Week.listView-meta.xml
<ListView>
    <fullName>New_Last_Week</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>New Last Week</label>
</ListView>