unpackaged/main/default/objects/Student1__c/listViews/New_This_Week.listView-meta.xml
<ListView>
    <fullName>New_This_Week</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Teacher__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>New This Week</label>
</ListView>