unpackaged/main/default/objects/Student1__c/listViews/This_Month.listView-meta.xml
<ListView>
    <fullName>This_Month</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Fee1__c</columns>
    <columns>Fee2__c</columns>
    <columns>Teacher__c</columns>
    <columns>Total_Fee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Teacher__c</field>
        <operation>equals</operation>
        <value>This Month</value>
    </filters>
    <label>This Month</label>
</ListView>